tests/NormalTests/paczka2/big_fuzzy/19232589.err
Error in line 8: Y5XVq6GhS1X A176 47,3
Error in line 6: A770 A770 29,9
Error in line 7: IU1IlSU75d A999 12,4
Error in line 15: IU1IlSU75d A770 19,6
Error in line 44: A770 A770 52,4
Error in line 53: GMOweWG38aK A770 53,00
Error in line 56: GMOweWG38aK A770 119,2
Error in line 60: I0if0xFA A176 80,7
Error in line 82: I0if0xFA A999 24,4
Error in line 99: I0if0xFA A176 373,0
Error in line 117: I0if0xFA S410 99,4
Error in line 123: Y5XVq6GhS1X A770 19,5
Error in line 107: N6fmCZ0OITJ A176 97,1
Error in line 129: N6fmCZ0OITJ A770 62,7
Error in line 124: I0if0xFA A999 88,1
Error in line 133: I0if0xFA A176 70,6
Error in line 138: Y5XVq6GhS1X S410 11,8
Error in line 140: Y5XVq6GhS1X A999 29,0
Error in line 141: Y5XVq6GhS1X S410 2,0
Error in line 127: GMOweWG38aK A999 29,2
Error in line 145: Y5XVq6GhS1X A770 82,7
Error in line 148: Y5XVq6GhS1X A999 84,7
Error in line 151: bEEUEo A770 47,0
Error in line 153: IU1IlSU75d A999 27,3
Error in line 158: bEEUEo A999 363
Error in line 159: I0if0xFA A999 71,3
Error in line 160: I0if0xFA A770 92,6
Error in line 156: bEEUEo A999 34,4
Error in line 164: bEEUEo A176 83,8
Error in line 174: N6fmCZ0OITJ S410 93,5
Error in line 175: I0if0xFA A770 10,7
Error in line 181: I0if0xFA A176 76,1
Error in line 190: IU1IlSU75d A176 90,6
Error in line 193: IU1IlSU75d A999 32,4
Error in line 194: IU1IlSU75d S410 22,6
Error in line 204: IU1IlSU75d A999 101,2
Error in line 218: IU1IlSU75d S410 60,36
Error in line 215: IU1IlSU75d A176 78,7
Error in line 223: GMOweWG38aK A176 50,9
Error in line 228: GMOweWG38aK A999 95,0
Error in line 221: Y5XVq6GhS1X S410 68,0
Error in line 244: N6fmCZ0OITJ S410 63,22
Error in line 242: N6fmCZ0OITJ A770 17,1
